# BoringSecretHunter

./: .dockerignore  .gitignore  BoringSecretHunter.java  Dockerfile  MinimalAnalysisOption.java  README.md  boring_secret_hunter.py  boring_secret_hunter_ghidra.py  boring_secret_hunter_jython.py  conftest.py  findBoringSSLLibsOnAndroid.py  ghidra_analysis.sh  ghidra_analysis_jython.sh  pyproject.toml  scanner.js
.github/workflows/: docker.yml  lint.yml  publish.yml  test.yml  version-check.yml
src/boring_secret_hunter/: __init__.py  __main__.py  analyzer.py  arch_detector.py  archive_extractor.py  binary_classifier.py  cli.py  config.py  ghidra_runner.py  result.py  utils.py
src/boring_secret_hunter/ghidra_scripts/: BoringSecretHunter.java
test/: README.md
tests/: conftest.py  test_arch_detector.py  test_archive_extractor.py  test_binary_classifier.py  test_integration.py  test_library_api.py
